@@ -1,3 +1,7 @@
+2006-03-07  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: ability to save config file
+
 2006-03-06  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	Merge patches from JGS:
